--- a/disclosure.html
+++ b/disclosure.html
@@ -41,9 +41,9 @@
 
     <footer class="site-footer">
       <div class="footer-main">
-        <span>© <span id="year"></span> Retinol.bio – Evidence-based retinol education.</span>
-        <span>Operated by ronarn AS, Norway. Independent information site with links to Retynol.com.</span>
-        <span>Contact: <a href="mailto:info@retinol.bio">info@retinol.bio</a></span>
+    <span>© <span id="year"></span> © 2025 DogDNA.bio – Independent information about dog DNA testing.</span>
+        <span>Operated by ronarn AS, Norway. Affiliate-supported. No paid rankings.</span>
+        <span>Contact: <a href="mailto:info@retinol.bio">info@dogdna.bio</a></span>
         <span>Business address: Pb. 1010 Lillestrøm Syd, 2012 Lillestrøm, Norway</span>
       </div>
       <nav class="footer-links">
